--- a/index.wc.html
+++ b/index.wc.html
@@ -8,18 +8,29 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
   <title>Web Components Integration</title>
+  <link rel="stylesheet"
+        href="/tailwind.css">
+  <script type="module"
+          src="/src/main.wc.ts"></script>
 </head>
 
-<body>
+<body class="w-full h-full p-0 xs:p-4">
   <h1 class="xs:text-xl md:text-2xl text-center m-4 font-bold">Diabolocom Frontend Task</h1>
   <h2 class="xs:text-lg md:text-xl text-center m-4 font-bold">Web Components Version</h2>
-  <div class="flex flex-col xs:flex-row justify-evenly gap-4">
-    <div class="relative flex flex-col w-full xs:w-1/2 max-w-[30rem]">
-      <dbl-buttons />
-      <dbl-display />
-      <dbl-reset />
-      <dbl-locale />
+  <div class="grid h-full md:grid-cols-2 gap-4 place-items-center">
+    <div>
+      <div class="relative flex flex-col min-w-[20rem] w-full max-w-[30rem] bg-primary-200 p-8 gap-4 rounded-md">
+        <dbl-display></dbl-display>
+        <dbl-buttons></dbl-buttons>
+        <dbl-reset></dbl-reset>
+        <dbl-locale></dbl-locale>
+      </div>
     </div>
+    <dbl-counter counterid="1"
+                 min="-100"
+                 max="100"
+                 value="0"
+                 color="secondary"></dbl-counter>
   </div>
 </body>
 
