Icons and titles

--- a/index.wc.html
+++ b/index.wc.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon"
-        href="/favicon.ico">
+        href="/favicon_wc.ico">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
   <title>Web Components Integration</title>
@@ -16,7 +16,12 @@
 
 <body class="w-full h-full p-0 xs:p-4">
   <h1 class="xs:text-xl md:text-2xl text-center m-4 font-bold">Diabolocom Frontend Task</h1>
-  <h2 class="xs:text-lg md:text-xl text-center m-4 font-bold">Web Components Version</h2>
+  <h2 class="xs:text-lg md:text-xl text-center m-4 mb-8 font-bold">
+    <img class="w-8 h-8 inline-block mr-2"
+         alt="Web Components Icon"
+         src="wc_icon.png" />
+    Components Version
+  </h2>
   <div class="grid h-full md:grid-cols-2 gap-4 place-items-center">
     <div>
       <div class="relative flex flex-col min-w-[20rem] w-full max-w-[30rem] bg-primary-200 p-8 gap-4 rounded-md">
