--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="icon"
-        href="/favicon.ico">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <title>Diabolocom Frontend Task</title>
+      <meta charset="UTF-8">
+      <link rel="icon"
+            href="/favicon.ico">
+      <meta name="viewport"
+            content="width=device-width, initial-scale=1.0">
+      <title>Diabolocom Frontend Task</title>
 </head>
 
-<body>
-  <div id="app"></div>
-  <script type="module"
-          src="/src/main.ts"></script>
+<body class="w-full h-full p-0 xs:p-4">
+      <div id="app"></div>
+      <script type="module"
+              src="/src/main.ts"></script>
 </body>
 
 </html>
