--- a/index.wc.html
+++ b/index.wc.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="w-full h-full p-0 xs:p-4">
-  <div>
+  <div role="main">
     <h1 class="xs:text-xl md:text-2xl text-center m-4 font-bold">Diabolocom Frontend Task</h1>
     <h2 class="xs:text-lg md:text-xl text-center m-4 mb-8 font-bold">
       <img class="w-8 h-8 inline-block mr-2"
